# ros_adas2019

./: .gitignore  .gitmodules  README.md
ros_adas2019/: CMakeLists.txt  package.xml
ros_adas2019/config/: Odometry.cfg  front_camera.yaml  rgb8.pfs
ros_adas2019/launch/: ros_adas2019.launch  ros_adas2019.py  vehicle.launch  vehicle.py  vehicle.xml
ros_adas2019/lib/arduino/: SerialDeviceBoost.cpp  arduino_com_client.cpp  arduino_com_client.h
ros_adas2019/msg/: Imu.msg
ros_adas2019/rviz/: vehicle.rviz  visualization.rviz
ros_adas2019/src/: ActuatorNode.cpp  ActuatorNode.h  ActuatorNode.hpp  BatteryNode.cpp  BatteryNode.h  BatteryNode.hpp  OdometryNode.cpp  OdometryNode.h  OdometryNode.hpp  ROSArduinoCommunicator.cpp  ROSArduinoCommunicator.h  ROSArduinoCommunicator.hpp  UltrasonicNode.cpp  UltrasonicNode.h  UltrasonicNode.hpp
