<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_adas2019</name>
  <version>2.0.0</version>
  <description>The ros_adas2019 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="aadc@fh-wedel.de">FH-Wedel</maintainer>

  <license>GPLv3</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author>Franz Wernicke</author>
  <author>Felix Maaß</author>
  <author>Hermann Höhne</author>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
