<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_adas2019</name>
  <version>2.0.0</version>
  <description>The ros_adas2019 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="aadc@fh-wedel.de">FH-Wedel</maintainer>
  <url type="repository">https://github.com/FHW-AutonomousDriving/ros_adas2019</url>

  <license>GPLv3</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author>Franz Wernicke</author>
  <author>Felix Maaß</author>
  <author>Hermann Höhne</author>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  
  <!-- https://docs.ros.org/en/foxy/Tutorials/Custom-ROS2-Interfaces.html#create-custom-definitions -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
